--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "zendframework/zend-diactoros": "^1.3.4",
-        "phpunit/phpunit": "5.3.0"
+        "phpunit/phpunit": "5.3.0",
+        "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload": {
         "psr-0": {
