auto patch codeclimate config

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,22 @@
-languages:
-  PHP: true
-
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - php
+  fixme:
+    enabled: true
+  phpmd:
+    enabled: true
+ratings:
+  paths:
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
+  - "**.rb"
 exclude_paths:
-  - "test/*"
-  - "vendor/*"
+- test/*
+- vendor/*
