--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,17 @@
     ],
     "authors": [{
         "name": "Alexpts",
-        "email": "alexpts@fun.co"
+        "email": "alexpts3@gmail.com"
     }],
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0.1",
+        "alexpts/php-tools": "^2.2.0"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "^1.3.4",
-        "phpunit/phpunit": "5.3.0",
+        "zendframework/zend-diactoros": "^1.3.7",
+        "phpunit/phpunit": "^5.6.2",
         "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload": {
