--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
         "alexpts/php-tools": "^2.3.0"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "^1.3.7",
-        "phpunit/phpunit": "^5.7.5",
-        "codeclimate/php-test-reporter": "dev-master"
+        "zendframework/zend-diactoros": "^1.3.10",
+        "phpunit/phpunit": "^6.0.8"
     },
     "autoload": {
         "psr-0": {
