--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -28,7 +28,7 @@ build:
     tests:
         override:
             -
-                command: 'phpunit  --configuration ./test/phpunit.xml --coverage-clover=test/clover.xml'
+                command: 'vendor/bin/phpunit --configuration ./test/phpunit.xml --coverage-clover=test/clover.xml'
                 coverage:
                     file: 'test/clover.xml'
-                    format: 'php-clover'
+                    format: 'clover'
