--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "alexpts/php-tools": "^2.3.0"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "^1.4.0",
-        "phpunit/phpunit": "^6.1.0"
+        "zendframework/zend-diactoros": "1.4.0",
+        "phpunit/phpunit": "6.1.4"
     },
     "autoload": {
         "psr-0": {
