--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     "require": {
         "php": ">=7.1",
         "psr/http-message": "^1.0.1",
-        "alexpts/php-tools": "^2.3.0"
+        "alexpts/php-tools": "^3.0"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "1.4.0",
-        "phpunit/phpunit": "6.1.4"
+        "zendframework/zend-diactoros": "^1.5",
+        "phpunit/phpunit": "^6.2"
     },
     "autoload": {
         "psr-0": {
