--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "alexpts/php-routing",
     "description": "Simple router compatible with the PSR-7",
     "homepage": "https://github.com/alexpts/php-routing",
+    "optimize-autoloader": true,
     "license": "MIT",
     "type": "library",
     "keywords": [
@@ -14,13 +15,13 @@
     }],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "psr/http-message": "^1.0.1",
-        "alexpts/php-tools": "^3.0"
+        "alexpts/php-tools": "^3.1"
     },
     "require-dev": {
-        "zendframework/zend-diactoros": "^1.5",
-        "phpunit/phpunit": "^6.2"
+        "zendframework/zend-diactoros": "^1.7",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "psr-0": {
